2003-11-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* gxx-declare-object-from-xml-tree.h, gxx-declare-object-to-xml-tree.h, Makefile.am, cong-dispspec-element-gxx.h, cong-dispspec-element.c, gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h, gxx-undefine-shared-macros.h

	New files for generating declarations of gxx functions; reimplemented <header-info> load/save using gxx

2003-11-07  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-element-gxx.h, cong-dispspec-element.c, cong-dispspec-element.h

	Added gxx support for element icon attribute, now outputs this correctly when saving xds files

	* cong-dispspec-element-gxx.h, cong-dispspec-element.c

	Added gxx support for <header-info> tags, fixing a long-standing bug in xds saving

	* cong-dispspec-gxx.h, cong-dispspec.c

	Port <external-document-model> to gxx

	* cong-dispspec-gxx.h, Makefile.am, cong-dispspec.c, gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h

	Ported dispspec serialisation format over to gxx

	* cong-dispspec-element-gxx.h, cong-dispspec-element.c

	Handle element @type using gxx rather than hand-coded C
	
	* gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h, gxx-undefine-shared-macros.h, cong-dispspec-element-gxx.h, Makefile.am, cong-dispspec-element.c

	Macro-based boilerplate generation of XML load/save routines
	
	* cong-editor-node-text.c

	Fixed a warning

	* cong-dispspec-element.c, cong-dispspec-element.h, Makefile.am, cong-dispspec.c, cong-dispspec.h, cong-document.h, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-node-element-span.c, cong-editor-node-element-structural.c, cong-editor-node.c, cong-node-properties-dialog.c, cong-node.c, cong-overview-view.c, global.h, plugin-admonition-node-element.c, popup.c, tree.c, xmldata.c

	Cut relevants parts of cong-dispspec.[hc] into new files cong-dispspec-element[.hc]

	* cong-dispspec.c, cong-dispspec.h, plugin-admonition-node-element.c
